--- a/css/style.css
+++ b/css/style.css
@@ -26,20 +26,25 @@
 #footer p {
 	margin-bottom: 0;
 	padding: 14px 0 14px 0;
-	background-image: url(../images/bg_footer.png);
+	background-image: url(../images/LawsonH1.png);
 	background-repeat: repeat-x;
 	text-align: center;
 }
 /* 基本レイアウト ここまで↑ */
 
-/* 「施設のご案内」ページ ここから↓ */
-
-/* 「施設のご案内」ページ ここまで↑ */
-
-/* 「料金プラン」ページ ここから↓ */
-
-/* 「料金プラン」ページ ここまで↑ */
-
-/* 「ご意見・ご要望」ページ ここから↓ */
-
-/* 「ご意見・ご要望」ページ ここまで↑ */
+/* 「ローソン」ページ ここから↓ */
+#main h2 {
+	padding: 0 0 10px 40px;
+	background-image: url(../images/LawsonH1.jpg);
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	font-size: 200%;
+}
+table {
+    margin-left:auto;
+    margin-right:auto;
+}
+td {
+    vertical-align: top;
+}
+/* 「ローソン」ページ ここまで↑ */
