--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,7 @@ body {
 	padding: 0;
 	background-image: url(../images/bg_header.png);
 	background-repeat: repeat-x;
-	color: #333333;
+	color: white;
 	font-family: "メイリオ", Meiryo, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 	font-size: 87.5%;
 	line-height: 1.5em;
@@ -46,11 +46,31 @@ img {
 }
 #main h2 {
 	margin-bottom: 10px;
-	padding: 4px 0 0 20px;
-	background-image: url(../images/h2.png);
+	padding: 40px 0 0 20px;
 	background-repeat: no-repeat;
 	background-position: 0 5px;
-	font-size: 134%;
+	font-size: 204%;
+}
+#main h3 {
+	margin-bottom: 10px;
+	padding: 4px 0 0 20px;
+	background-repeat: no-repeat;
+	background-position: 0 5px;
+	font-size: 204%;
+}
+#main h4 {
+	margin-bottom: 10px;
+	padding: 4px 0 0 20px;
+	background-repeat: no-repeat;
+	background-position: 0 5px;
+	font-size: 204%;
+}
+#main h6 {
+	margin-bottom: 10px;
+	padding: 4px 0 0 20px;
+	background-repeat: no-repeat;
+	background-position: 0 5px;
+	font-size: 350%;
 }
 caption {
 	overflow: hidden;
