--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-image: url(../images/bg_header.png);
+	background-image: url(../images/web2.jpg);
 	background-repeat: repeat-x;
 	color: #333333;
 	font-family: "メイリオ", Meiryo, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
@@ -16,8 +16,8 @@ p {
 img {
 	border: 0;
 }
-#contents {
-	width: 800px;
+#contents3 {
+	width: 1000px;
 	margin: 0 auto 0 auto;
 	overflow: hidden;
 }
@@ -47,7 +47,7 @@ img {
 #main h2 {
 	margin-bottom: 10px;
 	padding: 4px 0 0 20px;
-	background-image: url(../images/h2.png);
+	background-image: url();
 	background-repeat: no-repeat;
 	background-position: 0 5px;
 	font-size: 134%;
