--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 
 /* 基本レイアウト ここから↓ */
 @import url(common.css);
-#header {
+
+#header {   
 	width: 800px;
 	height: 70px;
 	margin: 20px auto 40px auto;
@@ -26,7 +27,7 @@
 #footer p {
 	margin-bottom: 0;
 	padding: 14px 0 14px 0;
-	background-image: url(../images/bg_footer.png);
+	background-image: url(../images/web1.jpg);
 	background-repeat: repeat-x;
 	text-align: center;
 }
@@ -42,4 +43,20 @@
 
 /* 「ご意見・ご要望」ページ ここから↓ */
 
+textarea {
+    width: 500px;
+    height: 170px;
+    overflow-y: scroll;
+}
+input.name {
+    width: 500px;
+}
+
+#footer p {
+	margin-bottom: 0;
+	padding: 14px 0 14px 0;
+	background-image: url(../images/web1.jpg);
+	background-repeat: repeat-x;
+	text-align: center;
+}
 /* 「ご意見・ご要望」ページ ここまで↑ */
