--- a/index.css/common.css
+++ b/index.css/common.css
@@ -16,8 +16,8 @@ p {
 img {
 	border: 0;
 }
-#contents {
-	width: 1500px;
+#contents3 {
+	width: 1000px;
 	margin: 0 auto 0 auto;
 	overflow: hidden;
 }
@@ -26,19 +26,32 @@ img {
 	margin-bottom: 30px;
 	float: left;
 }
-
+#sub {
+	width: 200px;
+	float: right;
+}
+#sub img {
+	display: block;
+}
+#sub ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+#sub ul li {
+	margin-bottom: 20px;
+}
 #graphic {
 	margin-bottom: 0;
 }
 #main h2 {
 	margin-bottom: 10px;
 	padding: 4px 0 0 20px;
-	background-image: url(../images/star.jpg);
+	background-image: url();
 	background-repeat: no-repeat;
-	background-position: 0px 5px;
+	background-position: 0 5px;
 	font-size: 134%;
 }
-#main 
 caption {
 	overflow: hidden;
 }
