--- a/index.css/style.css
+++ b/index.css/style.css
@@ -1,7 +1,7 @@
 ﻿@charset "utf-8";
 
 @import url(common.css);
-#header {
+#header {   
 	width: 800px;
 	height: 70px;
 	margin: 20px auto 40px auto;
@@ -22,6 +22,22 @@
 #nav ul li {
 	float: left;
 }
+#footer p {
+	margin-bottom: 0;
+	padding: 14px 0 14px 0;
+	background-image: url(../images/web1.jpg);
+	background-repeat: repeat-x;
+	text-align: center;
+}
+textarea {
+    width: 500px;
+    height: 170px;
+    overflow-y: scroll;
+}
+input.name {
+    width: 500px;
+}
+
 #footer p {
 	margin-bottom: 0;
 	padding: 14px 0 14px 0;
