--- a/lowson.css/common.css
+++ b/lowson.css/common.css
@@ -16,6 +16,11 @@ p {
 img {
 	border: 0;
 }
+#contents {
+	width: 1500px;
+	margin: 0 auto 0 auto;
+	overflow: hidden;
+}
 #contents3 {
 	width: 1000px;
 	margin: 0 auto 0 auto;
@@ -46,11 +51,31 @@ img {
 }
 #main h2 {
 	margin-bottom: 10px;
-	padding: 4px 0 0 20px;
-	background-image: url();
+	padding: 40px 0 0 20px;
 	background-repeat: no-repeat;
 	background-position: 0 5px;
-	font-size: 134%;
+	font-size: 204%;
+}
+#main h3 {
+	margin-bottom: 10px;
+	padding: 4px 0 0 20px;
+	background-repeat: no-repeat;
+	background-position: 0 5px;
+	font-size: 204%;
+}
+#main h4 {
+	margin-bottom: 10px;
+	padding: 4px 0 0 20px;
+	background-repeat: no-repeat;
+	background-position: 0 5px;
+	font-size: 204%;
+}
+#main h6 {
+	margin-bottom: 10px;
+	padding: 4px 0 0 20px;
+	background-repeat: no-repeat;
+	background-position: 0 5px;
+	font-size: 350%;
 }
 caption {
 	overflow: hidden;
